headings, floats, buttons, lists, code blocks, tables

--- a/index.html
+++ b/index.html
@@ -1,11 +1,93 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
     <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8">
     <title>Skeleton CSS</title>
   </head>
   <body>
+    <!-- HEADING -->
+    <h1>Heading</h1>
+    <h2>Heading</h2>
+    <h3>Heading</h3>
+    <h4>Heading</h4>
+    <h5>Heading</h5>
+    <h6>Heading</h6>
+
+    <!-- FLOATING -->
+    <h2 class="u-pull-left">Left</h2>
+    <h2 class="u-pull-right">Right</h2>
+    <!-- Clear Float -->
+    <div class="u-cf"></div>
+
+    <!-- BUTTONS -->
+    <button>Button</button>
+    <input type="submit" value="Submit">
+    <input type="button" value="Submit">
+    <a href="#" class="button">Link</a>
+
+    <br>
+
+    <!-- PRIMARY BUTTONS -->
+    <button class="button-primary">Button</button>
+    <input class="button-primary" type="submit" value="Submit">
+    <input class="button-primary" type="button" value="Submit">
+    <a href="#" class="button button-primary">Link</a>
+
+    <br>
+
+    <!-- FULL WIDTH (not just for buttons) -->
+    <button class="u-full-width">Full Width Button</button>
+
+    <!-- LISTS -->
+    <ul>
+      <li>Home</li>
+      <li>About</li>
+      <li>Services
+        <ul>
+          <li>Web Design</li>
+          <li>Web Development</li>
+        </ul>
+      </li>
+      <li>Contact</li>
+    </ul>
+
+    <!-- CODE BLOCK -->
+    <pre>
+      <code>
+        body {
+          color: #FFF;
+          background: #000;
+        }
+      </code>
+    </pre>
+
+    <!-- TABLES -->
+    <table class="u-full-width">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Email</th>
+          <th>City</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Jane Doe</td>
+          <td>janedoe@gmail.com</td>
+          <td>Minneapolis</td>
+        </tr>
+        <tr>
+          <td>Shane Doe</td>
+          <td>shanedoe@gmail.com</td>
+          <td>St. Paul</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <!-- FORMS -->
+    
 
   </body>
 </html>
