beginnings of landing page

--- a/index.html
+++ b/index.html
@@ -7,131 +7,133 @@
     <title>Skeleton CSS</title>
   </head>
   <body>
-    <!-- HEADING -->
-    <h1>Heading</h1>
-    <h2>Heading</h2>
-    <h3>Heading</h3>
-    <h4>Heading</h4>
-    <h5>Heading</h5>
-    <h6>Heading</h6>
+    <div class="container">
 
-    <!-- FLOATING -->
-    <h2 class="u-pull-left">Left</h2>
-    <h2 class="u-pull-right">Right</h2>
-    <!-- Clear Float -->
-    <div class="u-cf"></div>
+      <!-- HEADING -->
+      <h1>Heading</h1>
+      <h2>Heading</h2>
+      <h3>Heading</h3>
+      <h4>Heading</h4>
+      <h5>Heading</h5>
+      <h6>Heading</h6>
 
-    <!-- BUTTONS -->
-    <button>Button</button>
-    <input type="submit" value="Submit">
-    <input type="button" value="Submit">
-    <a href="#" class="button">Link</a>
+      <!-- FLOATING -->
+      <h2 class="u-pull-left">Left</h2>
+      <h2 class="u-pull-right">Right</h2>
+      <!-- Clear Float -->
+      <div class="u-cf"></div>
 
-    <br>
+      <!-- BUTTONS -->
+      <button>Button</button>
+      <input type="submit" value="Submit">
+      <input type="button" value="Submit">
+      <a href="#" class="button">Link</a>
 
-    <!-- PRIMARY BUTTONS -->
-    <button class="button-primary">Button</button>
-    <input class="button-primary" type="submit" value="Submit">
-    <input class="button-primary" type="button" value="Submit">
-    <a href="#" class="button button-primary">Link</a>
+      <br>
 
-    <br>
-
-    <!-- FULL WIDTH (not just for buttons) -->
-    <button class="u-full-width">Full Width Button</button>
-
-    <!-- LISTS -->
-    <ul>
-      <li>Home</li>
-      <li>About</li>
-      <li>Services
-        <ul>
-          <li>Web Design</li>
-          <li>Web Development</li>
-        </ul>
-      </li>
-      <li>Contact</li>
-    </ul>
-
-    <!-- CODE BLOCK -->
-    <pre>
-      <code>
-        body {
-          color: #FFF;
-          background: #000;
-        }
-      </code>
-    </pre>
-
-    <!-- TABLES -->
-    <table class="u-full-width">
-      <thead>
-        <tr>
-          <th>Name</th>
-          <th>Email</th>
-          <th>City</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>Jane Doe</td>
-          <td>janedoe@gmail.com</td>
-          <td>Minneapolis</td>
-        </tr>
-        <tr>
-          <td>Shane Doe</td>
-          <td>shanedoe@gmail.com</td>
-          <td>St. Paul</td>
-        </tr>
-      </tbody>
-    </table>
-
-    <!-- FORMS -->
-    <form>
-      <div>
-        <label>Name</label>
-        <input class="u-full-width" type="text" placeholder="Enter name">
-      </div>
-      <div>
-        <label>Membership</label>
-        <select class="u-full-width">
-          <option value="1">Membership 1</option>
-          <option value="2">Membership 2</option>
-          <option value="3">Membership 3</option>
-        </select>
-      </div>
-      <div>
-        <label>Message</label>
-        <textarea class="u-full-width" placeholder="Enter message"></textarea>
-      </div>
-      <div>
-        <label class="">
-          <input class="u-full-width" type="checkbox">
-          <span class="label-body">Subscribe to email</span>
-        </label>
-      </div>
+      <!-- PRIMARY BUTTONS -->
+      <button class="button-primary">Button</button>
       <input class="button-primary" type="submit" value="Submit">
-    </form>
+      <input class="button-primary" type="button" value="Submit">
+      <a href="#" class="button button-primary">Link</a>
 
-    <!-- GRID -->
-    <div class="row">
-      <div class="eight columns">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </div><div class="four columns">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      <br>
+
+      <!-- FULL WIDTH (not just for buttons) -->
+      <button class="u-full-width">Full Width Button</button>
+
+      <!-- LISTS -->
+      <ul>
+        <li>Home</li>
+        <li>About</li>
+        <li>Services
+          <ul>
+            <li>Web Design</li>
+            <li>Web Development</li>
+          </ul>
+        </li>
+        <li>Contact</li>
+      </ul>
+
+      <!-- CODE BLOCK -->
+      <pre>
+        <code>
+          body {
+            color: #FFF;
+            background: #000;
+          }
+        </code>
+      </pre>
+
+      <!-- TABLES -->
+      <table class="u-full-width">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Email</th>
+            <th>City</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Jane Doe</td>
+            <td>janedoe@gmail.com</td>
+            <td>Minneapolis</td>
+          </tr>
+          <tr>
+            <td>Shane Doe</td>
+            <td>shanedoe@gmail.com</td>
+            <td>St. Paul</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <!-- FORMS -->
+      <form>
+        <div>
+          <label>Name</label>
+          <input class="u-full-width" type="text" placeholder="Enter name">
+        </div>
+        <div>
+          <label>Membership</label>
+          <select class="u-full-width">
+            <option value="1">Membership 1</option>
+            <option value="2">Membership 2</option>
+            <option value="3">Membership 3</option>
+          </select>
+        </div>
+        <div>
+          <label>Message</label>
+          <textarea class="u-full-width" placeholder="Enter message"></textarea>
+        </div>
+        <div>
+          <label class="">
+            <input class="u-full-width" type="checkbox">
+            <span class="label-body">Subscribe to email</span>
+          </label>
+        </div>
+        <input class="button-primary" type="submit" value="Submit">
+      </form>
+
+      <!-- GRID -->
+      <div class="row">
+        <div class="eight columns">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div><div class="four columns">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+      </div>
+
+      <br>
+
+      <div class="row">
+        <div class="one-third column">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+        <div class="two-thirds column">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
       </div>
     </div>
-
-    <br>
-
-    <div class="row">
-      <div class="one-third column">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </div>
-      <div class="two-thirds column">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-      </div>
-    </div>
-
   </body>
 </html>
