added images and CSS to landing page

--- a/landing/index.html
+++ b/landing/index.html
@@ -15,7 +15,13 @@
             <h4 class="showcase-heading">
               This is the showcase heading.
             </h4>
-            <a href="#" class="button button-primary"></a>
+            <a href="#" class="button button-primary">
+              <i class="fa fa-download"></i>
+              Download Now
+            </a>
+          </div>
+          <div class="one-half column">
+            <img src="images/iphone.jpg" alt="iPhone" class="showcase-img">
           </div>
         </div>
       </div>
