--- a/landing/index.html
+++ b/landing/index.html
@@ -8,6 +8,7 @@
     <title>Skeleton CSS Landing Page</title>
   </head>
   <body>
+    <!-- SHOWCASE -->
     <section class="section showcase">
       <div class="container">
         <div class="row">
@@ -22,6 +23,29 @@
           </div>
           <div class="one-half column">
             <img src="images/iphone.jpg" alt="iPhone" class="showcase-img">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SECTION A -->
+    <section class="section-a">
+      <div class="container">
+        <div class="row">
+          <div class="one-third column">
+            <i class="fa fa-calendar"></i>
+            <h5>Plan Your Life</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+          <div class="one-third column">
+            <i class="fa fa-cloud"></i>
+            <h5>Upload To The Cloud</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+          <div class="one-third column">
+            <i class="fa fa-users"></i>
+            <h5>Manage Users</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
         </div>
       </div>
