--- a/landing/index.html
+++ b/landing/index.html
@@ -14,7 +14,7 @@
         <div class="row">
           <div class="one-half column">
             <h4 class="showcase-heading">
-              This is the showcase heading.
+              Landing Page Showcase Heading
             </h4>
             <a href="#" class="button button-primary">
               <i class="fa fa-download"></i>
